Add Property#show with `link_to`s on index

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -12,7 +12,7 @@
         <% @properties.each do |property| %>
             <div class="row">
                 <div class="cell">
-                    <%= property.title %>
+                    <%= link_to property.title, property_path(property) %>
                 </div>
             </div>
         <% end %>
