--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -22,6 +22,9 @@
                     display: flex;
                     justify-content: center;
                 }
+                &.tiebreaker_sort {
+                    display: none;
+                }
             }
         }
     }
