Add filter for min beds

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -25,7 +25,7 @@
             <div class="cell user_rating">User Rating</div>
         </div>
     </div>
-    <div class="body search-target sort-target">
+    <div class="body search-target sort-target filter-target">
         <% @properties.each do |property| %>
             <div class="row">
                 <div class="cell title">
